Se mejora Merge Sort